Add comment db and type, no complie error
