# build/swagger.json
@@ -8,64 +8,57 @@
 		"schemas": {
 			"Comment": {
 				"properties": {
+					"post": {
+						"$ref": "#/components/schemas/Post"
+					},
 					"id": {
 						"type": "number",
 						"format": "double"
-					},
-					"email": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					},
-					"status": {
-						"type": "string",
-						"enum": [
-							"Happy",
-							"Sad"
-						]
-					},
-					"phoneNumbers": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
 					}
 				},
 				"required": [
-					"id",
-					"email",
-					"name",
-					"phoneNumbers"
+					"post",
+					"id"
 				],
-				"type": "object",
-				"additionalProperties": false
+				"type": "object"
 			},
-			"Pick_Comment.email-or-name-or-phoneNumbers_": {
+			"Post": {
 				"properties": {
-					"email": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					},
-					"phoneNumbers": {
+					"comments": {
 						"items": {
-							"type": "string"
+							"$ref": "#/components/schemas/Comment"
 						},
 						"type": "array"
+					},
+					"id": {
+						"type": "number",
+						"format": "double"
 					}
 				},
 				"required": [
-					"email",
-					"name",
-					"phoneNumbers"
+					"comments",
+					"id"
 				],
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
+				"type": "object"
 			},
-			"CommentCreationParams": {
-				"$ref": "#/components/schemas/Pick_Comment.email-or-name-or-phoneNumbers_"
+			"CreateCommentRequest": {
+				"properties": {
+					"displayName": {
+						"type": "string"
+					},
+					"commentBody": {
+						"type": "string"
+					},
+					"phoneNumber": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"displayName",
+					"commentBody",
+					"phoneNumber"
+				],
+				"type": "object"
 			},
 			"User": {
 				"properties": {
@@ -144,12 +137,12 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/comments/{commentId}": {
-			"get": {
-				"operationId": "GetComment",
+		"/comments/{postId}": {
+			"post": {
+				"operationId": "CreateComment",
 				"responses": {
-					"200": {
-						"description": "Ok",
+					"201": {
+						"description": "Created",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -163,40 +156,19 @@
 				"parameters": [
 					{
 						"in": "path",
-						"name": "commentId",
+						"name": "postId",
 						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					},
-					{
-						"in": "query",
-						"name": "name",
-						"required": false,
 						"schema": {
 							"type": "string"
 						}
 					}
-				]
-			}
-		},
-		"/comments": {
-			"post": {
-				"operationId": "CreateComment",
-				"responses": {
-					"201": {
-						"description": "Created"
-					}
-				},
-				"security": [],
-				"parameters": [],
+				],
 				"requestBody": {
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/CommentCreationParams"
+								"$ref": "#/components/schemas/CreateCommentRequest"
 							}
 						}
 					}
