# src/@types/data.ts
@@ -1,0 +1,9 @@
+export type Comment = {
+    id: number;
+    post: Post;
+}
+
+export type Post = {
+    id: number;
+    comments: Comment[]
+}
