# src/@types/requests.ts
@@ -1,0 +1,5 @@
+export type CreateCommentRequest = {
+    phoneNumber: string;
+    commentBody: string;
+    displayName: string;
+}
